upgrade OrqueIO version to 2.0.4-SNAPSHOT and java version to 25