@@ -6,14 +6,14 @@
   <packaging>jar</packaging>
 
   <properties>
-    <version.orqueio>2.0.2</version.orqueio>
+    <version.orqueio>2.0.4-SNAPSHOT</version.orqueio>
     <version.assertj>3.26.3</version.assertj>
     <version.junit>4.13.2</version.junit>
     <version.h2>2.3.232</version.h2>
     <version.mockito>5.10.0</version.mockito>
     <version.slf4j>1.7.36</version.slf4j>
 
-    <maven.compiler.release>21</maven.compiler.release>
+    <maven.compiler.release>25</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <version.plugin.maven-compiler>3.11.0</version.plugin.maven-compiler>
@@ -87,6 +87,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${version.plugin.maven-compiler}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
